Good Lord, mining is not that easy

--- a/index.html
+++ b/index.html
@@ -13,38 +13,6 @@
 
 <body>
   <div class="blockchain">
-    <!-- <div class="block" id="block-0">
-      <div class="input-group data-input">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="data">DATA</span>
-        </div>
-        <input readonly class="form-control" type="text" name="data" aria-describedby="data"
-          value="Welcome to demo blockchain!" />
-      </div>
-      <div class="previousHash">
-        <span>PREVIOUS HASH</span>
-        <span class="hash" id="previousValue">0</span>
-      </div>
-      <div class="currentHash">
-        <span>HASH</span>
-        <div id="currentValue">
-          <span class="hash">000f0a9cbf6db1e982d74ce707a5dfd86bf4890753ccd85cfdb75730ccd3fe19
-          </span>
-        </div>
-      </div>
-      <div class="footter">
-        <div class="block-info">
-          <div class="block-tag">GENESIS BLOCK</div>
-          <div class="timestamp"></div>
-        </div>
-        <div class="block-function">
-          <div class="nounce">
-            <span class="nounceValue">604</span>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    
   </div>
   <div class="new-block">
     <div class="input-group data-input">
@@ -62,7 +30,7 @@
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/sha256.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
   <script type="module" src="index.js"></script>
 </body>
 
